--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.flightontrack"
-    android:versionCode="63"
+    android:versionCode="71"
     android:versionName="FONT">
 
     <supports-screens
@@ -35,14 +35,14 @@
         android:required="false" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".other.MyApplication"
         android:label="@string/app_label"
         android:icon="@drawable/ic_launcher"
         android:allowBackup="true"
         android:theme="@style/AppTheme"
     >
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
@@ -54,40 +54,40 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".PermissionActivity" />
+        <activity android:name=".activity.PermissionActivity" />
 
 
         <activity
-            android:name=".HelpPageActivity"
+            android:name=".activity.HelpPageActivity"
             android:label="@string/action_help"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.MainActivity" />
+                android:value="com.flightontrack.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".SimpleSettingsActivity"
+            android:name=".activity.SimpleSettingsActivity"
             android:label="@string/action_settings"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.MainActivity" />
+                android:value="com.flightontrack.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".LogBookActivity"
+            android:name=".activity.LogBookActivity"
             android:label="@string/activity_logbook_title"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.MainActivity" />
+                android:value="com.flightontrack.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".AircraftActivity"
+            android:name=".activity.AircraftActivity"
             android:label="@string/activity_aircraft_title"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.MainActivity" />
+                android:value="com.flightontrack.activity.MainActivity" />
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -99,11 +99,11 @@
             android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.MainActivity" />
+                android:value="com.flightontrack.activity.MainActivity" />
         </activity>
          <receiver
              android:enabled="true"
-             android:name=".ReceiverBoot"
+             android:name=".receiver.ReceiverBoot"
              >
              <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
@@ -112,7 +112,7 @@
          </receiver>
         <receiver
             android:enabled="true"
-            android:name=".ReceiverShutDown"
+            android:name=".receiver.ReceiverShutDown"
             >
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
@@ -121,24 +121,24 @@
         </receiver>
         <receiver
             android:enabled="true"
-            android:name=".ReceiverHealthCheckAlarm"
+            android:name=".receiver.ReceiverHealthCheckAlarm"
             >
             <intent-filter>
                 <action android:name="android.intent.action.com.flightontrack.BROADCAST_HEALTHCHECK"/>
             </intent-filter>
         </receiver>
         <service
-            android:name=".SvcComm"
+            android:name=".communication.SvcComm"
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="false"></service>
         <service
-            android:name=".SvcBackground"
+            android:name=".other.SvcBackground"
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="false"></service>
         <service
-            android:name=".SvcLocationClock"
+            android:name=".locationclock.SvcLocationClock"
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="false"></service>
