--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,12 @@ sourceSets{
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-//    compile 'ch.acra:acra:4.8.5'
-    //compile 'com.android.support:appcompat-v7:25.0.0'
-    //compile 'com.android.support:cardview-v7:25.0.0'
+    //provided 'com.facebook.android:facebook-android-sdk:[4,5)'
+    //    compile 'ch.acra:acra:4.8.5'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
     //compile 'com.android.support:widget-v7+'
     //compile files('libs/facebook-android-sdk-4.11.0')
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
