--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
 
     <uses-feature
         android:name="android.hardware.nfc"
@@ -119,6 +121,14 @@
                 <action android:name="android.intent.action.QUICKBOOT_POWEROFF"/>
             </intent-filter>
         </receiver>
+        <!--<receiver-->
+            <!--android:enabled="true"-->
+            <!--android:name=".receiver.ReceiverBatteryLevel">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.BATTERY_LOW"/>-->
+                <!--<action android:name="android.intent.action.BATTERY_OKAY"/>-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
         <receiver
             android:enabled="true"
             android:name=".receiver.ReceiverHealthCheckAlarm"
