--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    //buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.flightontrack"
@@ -27,11 +27,12 @@ android {
 repositories {
      // for releases
     mavenCentral()
- }
+    google()
+}
 sourceSets{
     main{
         java {
-            exclude '**/FaceBookActivity.java'
+            //exclude '**/FaceBookActivity.java'
         }
     }
 }
@@ -40,8 +41,9 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     //provided 'com.facebook.android:facebook-android-sdk:[4,5)'
     //    compile 'ch.acra:acra:4.8.5'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.facebook.android:facebook-share:4.28.0'
     //compile 'com.android.support:widget-v7+'
     //compile files('libs/facebook-android-sdk-4.11.0')
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
