--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         android:theme="@style/AppTheme"
     >
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
@@ -56,52 +56,52 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".activity.PermissionActivity" />
+        <activity android:name=".ui.PermissionActivity" />
 
 
         <activity
-            android:name=".activity.HelpPageActivity"
+            android:name=".ui.HelpPageActivity"
             android:label="@string/action_help"
-            android:parentActivityName=".activity.MainActivity">
+            android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.activity.MainActivity" />
+                android:value="com.flightontrack.ui.MainActivity" />
         </activity>
         <activity
-            android:name=".activity.SimpleSettingsActivity"
+            android:name=".ui.SimpleSettingsActivity"
             android:label="@string/action_settings"
-            android:parentActivityName=".activity.MainActivity">
+            android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.activity.MainActivity" />
+                android:value="com.flightontrack.ui.MainActivity" />
         </activity>
         <activity
-            android:name=".activity.LogBookActivity"
+            android:name=".ui.LogBookActivity"
             android:label="@string/activity_logbook_title"
-            android:parentActivityName=".activity.MainActivity">
+            android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.activity.MainActivity" />
+                android:value="com.flightontrack.ui.MainActivity" />
         </activity>
         <activity
-            android:name=".activity.AircraftActivity"
+            android:name=".ui.AircraftActivity"
             android:label="@string/activity_aircraft_title"
-            android:parentActivityName=".activity.MainActivity">
+            android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.activity.MainActivity" />
+                android:value="com.flightontrack.ui.MainActivity" />
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FaceBookActivity"
+        <activity android:name=".ui.FaceBookActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.flightontrack.activity.MainActivity" />
+                android:value="com.flightontrack.ui.MainActivity" />
         </activity>
          <receiver
              android:enabled="true"
