--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,16 @@ android {
         applicationId "com.flightontrack"
         minSdkVersion 19
         targetSdkVersion 26
-//        versionCode 1
-//        versionName "1.1"
+        versionCode 100
+        versionName "100.1"
     }
     buildTypes {
         release {
             //runProguard true
             minifyEnabled true
             shrinkResources true
+            ext.enableCrashlytics = false
+            ext.alwaysUpdateBuildId = false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
@@ -24,46 +26,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
 }
-repositories {
-    // for releases
-    mavenCentral()
-    //maven { url 'https://maven.fabric.io/public' }
-    google()
-}
-sourceSets {
-    main {
-        java {
-            //exclude '**/FaceBookActivity.java'
-        }
-    }
-}
+
 dependencies {
-    //implementation 'com.google.firebase:firebase-crash:16.0.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    //provided 'com.facebook.android:facebook-android-sdk:[4,5)'
-    //    compile 'ch.acra:acra:4.8.5'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.facebook.android:facebook-share:4.32.0'
-    //compile 'com.android.support:widget-v7+'
-    //compile files('libs/facebook-android-sdk-4.11.0')
-    //compile 'com.google.firebase:firebase-appindexing:16.0.1'
-    //classpath 'io.fabric.tools:gradle:1.+'
 }
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
+
 apply plugin: 'com.google.gms.google-services'
